Updated Service API to v3
