# service_api/media_server_api/models/conf_param_change.py
@@ -1,0 +1,65 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from media_server_api.models.base_model import Model
+from media_server_api.models.slo_description_target import SLODescriptionTarget
+from media_server_api import util
+
+from media_server_api.models.slo_description_target import SLODescriptionTarget  # noqa: E501
+
+class ConfParamChange(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, value=None):  # noqa: E501
+        """ConfParamChange - a model defined in OpenAPI
+
+        :param value: The value of this ConfParamChange.  # noqa: E501
+        :type value: SLODescriptionTarget
+        """
+        self.openapi_types = {
+            'value': SLODescriptionTarget
+        }
+
+        self.attribute_map = {
+            'value': 'value'
+        }
+
+        self._value = value
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ConfParamChange':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ConfParamChange of this ConfParamChange.  # noqa: E501
+        :rtype: ConfParamChange
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def value(self) -> SLODescriptionTarget:
+        """Gets the value of this ConfParamChange.
+
+
+        :return: The value of this ConfParamChange.
+        :rtype: SLODescriptionTarget
+        """
+        return self._value
+
+    @value.setter
+    def value(self, value: SLODescriptionTarget):
+        """Sets the value of this ConfParamChange.
+
+
+        :param value: The value of this ConfParamChange.
+        :type value: SLODescriptionTarget
+        """
+        if value is None:
+            raise ValueError("Invalid value for `value`, must not be `None`")  # noqa: E501
+
+        self._value = value
